# serde_rustler

./: .gitignore  Cargo.toml  LICENSE  README.md  mix.exs
.semaphore/: semaphore.yml
serde_rustler/: CHANGELOG.MD  Cargo.toml  README.md
serde_rustler/src/: atoms.rs  de.rs  error.rs  lib.rs  ser.rs  util.rs
serde_rustler_tests/: .credo.exs  .gitignore  README.md  mix.exs
serde_rustler_tests/config/: config.exs
serde_rustler_tests/lib/: json.ex  readme.ex  serde_rustler_tests.ex
serde_rustler_tests/native/serde_rustler_tests/: Cargo.toml  README.md
serde_rustler_tests/native/serde_rustler_tests/src/: json.rs  lib.rs  ser.rs  test.rs  types.rs
serde_rustler_tests/output/: decode.md  encode.md
serde_rustler_tests/test/: benchmarks.exs  json_test.ex  json_test.exs  readme_test.exs  ser_test.exs  serde_rustler_tests_test.exs  test_helper.exs
