[package]
name = "serde_rustler"
description = "Serializer and Deserializer traits for Rustler NIFs"
version = "0.0.1"
authors = ["Sunny G <sunny.gonna@gmail.com>"]
repository = "https://github.com/sunny-g/serde_rustler"
categories = ["encoding", "external-ffi-bindings", "serde", "rustler", "elixir"]
readme = "README.md"
license = "MIT"
edition = "2018"

[lib]
name = "serde_rustler"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
lazy_static = "1.0"
quick-error = "1.2"
rustler = "0.20.0"
rustler_codegen = "0.20.0"
serde = "1.0"
