[package]
name = "serde_rustler_tests"
version = "0.0.1"
authors = ["Sunny G <sunny.gonna@gmail.com>"]
edition = "2018"
publish = false

[lib]
name = "serde_rustler_tests"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.0"
rustler = "0.20.0"
rustler_codegen = "0.20.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
serde_rustler = { path = "../../../serde_rustler" }
serde-transcode = "1.1"
